# `pydot` changelog


1.4.2 (unreleased)
------------------

- Fix: Prevent TypeError in handling of DOT parser error (#176)


1.4.1 (2018-12-12)
------------------

- Make graph, edge, node attributes order deterministic
- Fix string formatting after catching error (#201)


1.4.0 (2018-12-01)
------------------

- Installation of pydot in conda env on Windows directly supported
- Fixed comparing of SHA hash in regression tests (which fail now)


1.3.0 (2018-11-19)
------------------

- Dropped Python 2.6 support (#185)
- Move errno from os to builtin. Fixes #177 (#191, #182)


1.2.4 (2017-12-25)
------------------

- ENH: propagate `LD_LIBRARY_PATH` when calling GraphViz
- API: raise `OSError` when a GraphViz executable is not found
- API: add method `__str__` to classes `Node, Edge, Graph`
- API: add arg `encoding` to `Dot` methods `create, write`
- API: quote cluster names when necessary
- API: give source and destination nodes as separate args to `Edge.__init__`
- API: never ignore `src, dst`, overwrite if `points` defined in `obj_dict`


1.2.3 (2016-10-06)
------------------

- support Python 2.6
- several corrections
- quote empty strings to avoid graphviz errors


1.2.0 (2016-07-01)
------------------

- support Python 3
- bumped dependency to `pyparsing >= 2.1.4`
- tests running on Travis CI
- tests require `chardet`
- detect character encoding for most test files
  using the package `chardet`

API:

- on all operating systems, search GraphViz
  executables in environment `$PATH`,
  using `subprocess.Popen`.
  No paths hard-coded due to security and privacy issues.

- add option to pass GraphViz executable name
  or absolute path as `prog` to `pydot.Dot.write_*` methods.
  This provides an alternative to
  adding GraphViz to the `$PATH`.

- the functions:
    - `pydot.graph_from_dot_data`
    - `pydot.graph_from_dot_file`
    - `dot_parser.parse_dot_data`
  changed to always return a `list` of graphs,
  instead of behaving differently for singletons.
